tests/error/poly_errors/non_linear2.err
Error: Not defined for linear argument (at $FILE:23:4)
   | 
21 | @guppy(module)
22 | def main() -> None:
23 |     foo(h)
   |     ^^^^^^ Cannot instantiate non-linear type parameter `T` in type
   |            `forall T. (T -> T) -> None` with linear type
   |            `qubit`

Guppy compilation failed due to 1 previous error
